<resources>
    <string name="app_name">Neighborly</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_materials">Materials</string>
    <string name="title_time">Time</string>
    <string name="title_money">Money</string>
    <string name="join">Join a community</string>
    <string name="create">Create a community</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_a_community">Join a Community</string>
    <string name="code">Code</string>
    <string name="join_community">Join Community</string>
    <string name="create_a_community">Create a Community</string>
    <string name="create_a_code">Create a code</string>
    <string name="code_reminder">(Please only use characters, numbers, dashes, or underscores!)</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
