<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinCommunityActivity"
    android:background="@color/pale_blue"
    android:padding="@dimen/padding">

    <TextView
        android:id="@+id/join_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_a_community"
        android:fontFamily="@font/marcellus_bold"
        android:textSize="@dimen/header_size"
        android:textColor="@color/dark_blue"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/code_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/marcellus_bold"
        android:text="@string/code"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_header" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/marcellus_bold"
        android:textColor="@color/dark_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_header" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="@color/dark_blue"
        android:fontFamily="@font/marcellus_bold"
        android:padding="20dp"
        android:text="@string/join_community"
        android:textColor="@color/white"
        android:onClick="joinCommunity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code" />

</androidx.constraintlayout.widget.ConstraintLayout>